# discord_anime_bot

./: .dockerignore  .gitignore  Anime_Pic.py  Basic_commands.py  Daily_Task.py  Dockerfile  Gachi_handler.py  Music_commands.py  OLD_discord_bot.py  README.md  anime_ch_commands.py  anime_picture.py  azure_api_test.ipynb  categories_list.py  discord_bot.py  discord_bot_main.py  docker-compose.debug.yml  docker-compose.yml  gachi_dict.yaml  nasa_picture.py  pyproject.toml  requirements.txt  tests.ipynb
modules/: Anime_Pic.py  Daily_Task.py  Gachi_handler.py  Music_commands.py  anime_ch_commands.py  anime_picture.py  nasa_picture.py
scripts/: docker_run.sh  docker_stop.sh  man_run_app.sh  man_stop_app.sh
src/: discord_bot_main.py
src/modules/: AnimeChCommands.py  AnimePic.py  Anime_Pic.py  BasicCommands.py  Basic_commands.py  BotSlashCommands.py  Buttons.py  DailyTask.py  Daily_Task.py  GachiCommands.py  GachiHandler.py  Gachi_handler.py  MusicCommands.py  Music_commands.py  RawCommands.py  RawSoundCommands.py  Sound.py  SoundCommands.py  StickerSlashCommands.py  anime_ch_commands.py  anime_pic.py  db_connector.py
src/static_data/: gachi_dict.py  guilds.py
