[tool.poetry]
name = "discord_anime_bot"
version = "0.1.0"
description = ""
authors = ["WildElaeagnus <54314123+akorzunin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2022.1"
discord = "^1.7.3"
youtube_dl = "^2021.12.17"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
